--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -92,6 +92,23 @@
     box-shadow: 2px 2px 8px rgba(0, 0, 0, 0.1);
     border-radius: 50%;
   }
+
+  &.loader-bg {
+    height: 150px;
+    margin: 5px 0;
+    width: 95%;
+    background-image: linear-gradient(
+      -225deg,
+      #69eacb29 0%,
+      #eaccf83d 48%,
+      #6654f114 100%
+    );
+
+    .loader {
+      margin-left: auto;
+      margin-right: auto;
+    }
+  }
 }
 
 .remove {
