--- a/src/app/poll/poll.component.html
+++ b/src/app/poll/poll.component.html
@@ -236,6 +236,7 @@
           >add_circle_outline</mat-icon
         >
       </ng-container>
+      <div class="gradient-divider"></div>
     </mat-card>
     <p class="disclaimer">
       This content is neither created nor endorsed by the service provider.
