--- a/src/app/login-dialog/login-dialog.component.html
+++ b/src/app/login-dialog/login-dialog.component.html
@@ -1,12 +1,32 @@
 <h1 mat-dialog-title>Login or use a nickname</h1>
-<p class="info">To manage your polls you need to login with Google. No worries, you can still create, share and vote polls withouth signing in. With login it's just easier! 😉</p>
-<button mat-raised-button cdkFocusInitial (click)="login()" color="primary" aria-label="Login">Login with Google</button>
+<p class="info">
+  To manage your polls you need to login with Google. No worries, you can still
+  vote and react to polls withouth signing in. With login it's just easier and
+  you can create and manage your own polls! 😉
+</p>
+<p class="tech-details">
+  Poll-a-Lot uses Firebase Authentication and only you forename will be stored
+  to be display in the app. Industry standard authentication is used so that
+  your login credentials will never be passed or saved to Poll-a-Lot.
+  <a target="_blank" href="https://firebase.google.com/docs/auth">Read more!</a>
+</p>
+<button
+  mat-raised-button
+  cdkFocusInitial
+  (click)="login()"
+  color="primary"
+  aria-label="Login"
+>
+  Login with Google
+</button>
 <div mat-dialog-content>
   <p>Use nickname:</p>
   <mat-form-field>
-    <input matInput placeholder="Nickname" [(ngModel)]="data.nickname">
+    <input matInput placeholder="Nickname" [(ngModel)]="data.nickname" />
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button [mat-dialog-close]="data.nickname" aria-label="Ok">Ok</button>
+  <button mat-button [mat-dialog-close]="data.nickname" aria-label="Ok">
+    Ok
+  </button>
 </div>
