--- a/src/app/poll/poll.component.scss
+++ b/src/app/poll/poll.component.scss
@@ -125,6 +125,15 @@
   font-size: 40px;
   height: 40px;
   width: 40px;
+
+  background-image: linear-gradient(
+    52deg,
+    #ac32e4a8 0%,
+    #7918f2d4 51%,
+    #7092e6e6 100%
+  );
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
 
 .add-new-item-container {
@@ -168,4 +177,19 @@
 
 .vote-multiple {
   margin: 25px;
+}
+
+.gradient-divider {
+  background-image: linear-gradient(
+    -225deg,
+    #ac32e4 0%,
+    #7918f2 37%,
+    #7092e6 100%
+  );
+  height: 2px;
+  width: 98vmin !important;
+  border-bottom-left-radius: 4px;
+  border-bottom-right-radius: 4px;
+  position: relative;
+  top: 16px;
 }
