--- a/src/styles.scss
+++ b/src/styles.scss
@@ -69,6 +69,11 @@ label {
   font-family: "Product Sans Bold";
 }
 
+.mat-card {
+  margin-left: auto;
+  margin-right: auto;
+}
+
 .mat-card.option-card {
   font-family: "Product Sans";
   font-size: 1.2em;
@@ -225,4 +230,9 @@ label {
   a {
     color: white;
   }
+}
+
+.tech-details {
+  font-size: 0.8em;
+  color: darkgrey;
 }
