--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -217,7 +217,7 @@
     .reaction {
       position: relative;
       z-index: 0;
-      min-height: 26px;
+      min-height: 28px;
       display: flex;
       justify-content: center;
       align-items: center;
@@ -237,7 +237,7 @@
 
       .label {
         position: relative;
-        bottom: 1px;
+        bottom: 2px;
       }
 
       &.has-reacted {
@@ -263,7 +263,8 @@
       }
 
       .count {
-        margin-left: 7px;
+        position: relative;
+        right: -3px;
         font-size: 15px;
         min-width: 16px;
         padding-left: 3px;
@@ -419,6 +420,7 @@
     overflow-y: hidden;
     transition: max-height ease 0.5s, background-color ease 0.3s;
     justify-content: flex-end;
+    user-select: none;
 
     & .scroll {
       width: 100%;
@@ -482,4 +484,8 @@
 
 .with-launch-icon {
   margin: 0 3px;
+}
+
+.user-select-none {
+  user-select: none;
 }
