--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -197,7 +197,7 @@
 
   .reactions {
     & > * {
-      margin-left: 7px;
+      margin-left: 3px;
     }
 
     min-height: 14px;
@@ -209,6 +209,10 @@
     border-bottom-right-radius: 4px;
     justify-content: flex-end;
     flex-wrap: wrap;
+
+    &.reactions-disabled {
+      padding-right: 16px;
+    }
 
     &:empty {
       background: unset;
@@ -288,8 +292,9 @@
     background-image: linear-gradient(0deg, #484747 75%, transparent);
     background-position-y: 65px;
     background-size: calc($posterWidth + 20px) 66px;
-    max-height: 100px;
-    transition: max-height 0.6s ease;
+    transition: height 0.4s ease-out;
+    height: 39px;
+    overflow: hidden;
 
     .reaction {
       position: relative;
@@ -330,6 +335,7 @@
 
     &:not(.open) {
       background-position-y: 0;
+      height: 28px;
 
       .reaction {
         max-height: 17px;
@@ -488,4 +494,9 @@
 
 .user-select-none {
   user-select: none;
+
+  &::before,
+  &::after {
+    user-select: none;
+  }
 }
