--- a/src/app/poll-option-dialog/poll-option-dialog.component.html
+++ b/src/app/poll-option-dialog/poll-option-dialog.component.html
@@ -4,24 +4,41 @@
   <mat-icon class="animation-roll" color="primary">casino</mat-icon>
 </div>
 
-<div class="content" [style.visibility]="!showLoading ? 'visible' : 'hidden'" [@fadeInOut]="!showLoading">
+<div
+  class="content"
+  [style.visibility]="!showLoading ? 'visible' : 'hidden'"
+  [@fadeInOut]="!showLoading"
+>
   <ng-container *ngIf="!pollItem.movieId && !pollItem.seriesId">
     <mat-card transition-group-item class="option-card">
       <div class="name">{{ pollItem.name }}</div>
     </mat-card>
   </ng-container>
   <ng-container *ngIf="pollItem.movieId">
-    <movie-poll-item [pollItem]="pollItem" [showCreator]="pollItem.creator"></movie-poll-item>
+    <movie-poll-item
+      [pollItem]="pollItem"
+      [showCreator]="pollItem.creator"
+      [reactable]="false"
+    ></movie-poll-item>
   </ng-container>
   <ng-container *ngIf="pollItem.seriesId">
-    <series-poll-item [pollItem]="pollItem" [showCreator]="pollItem.creator"></series-poll-item>
+    <series-poll-item
+      [pollItem]="pollItem"
+      [showCreator]="pollItem.creator"
+    ></series-poll-item>
   </ng-container>
 </div>
 
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" [mat-dialog-close]="true" aria-label="Ok" (click)="onOk()">Ok</button>
+  <button
+    mat-raised-button
+    color="primary"
+    [mat-dialog-close]="true"
+    aria-label="Ok"
+    (click)="onOk()"
+  >
+    Ok
+  </button>
 </div>
 
-<ng-template #loading>
-  
-</ng-template>
+<ng-template #loading> </ng-template>
