--- a/src/styles.scss
+++ b/src/styles.scss
@@ -38,6 +38,10 @@ html {
     .disclaimer {
       color: #ccc;
     }
+
+    .available-reactions .add-btn {
+      color: #8f8f8f;
+    }
   }
 }
 
