--- a/src/app/movie-poll-item/movie-poll-item.component.scss
+++ b/src/app/movie-poll-item/movie-poll-item.component.scss
@@ -90,9 +90,11 @@
 
   .overview {
     font-size: 0.7em;
+    $line-height: 1.2em;
+    line-height: $line-height;
 
     &.shortened {
-      height: 49px;
+      height: calc(3 * $line-height);
       overflow: hidden;
     }
 
@@ -202,7 +204,7 @@
 
     min-height: 14px;
     margin-left: -16px;
-    padding: 0 58px 13px 16px;
+    padding: 0 58px 16px 0;
     margin-right: -16px;
     margin-bottom: -10px;
     border-bottom-left-radius: 4px;
@@ -221,14 +223,13 @@
     .reaction {
       position: relative;
       z-index: 0;
-      min-height: 28px;
+      min-height: 25px;
       display: flex;
       justify-content: center;
       align-items: center;
-      padding: 1px 9px;
+      padding: 1px 7px;
       border-radius: 9999px;
-      min-width: 27px;
-      font-size: 17px;
+      font-size: 13px;
       margin-top: 5px;
       color: #58565a;
       background: #ffffffe8;
@@ -269,7 +270,7 @@
       .count {
         position: relative;
         right: -3px;
-        font-size: 16px;
+        font-size: 14px;
         min-width: 16px;
         padding-left: 1px;
         text-align: center;
@@ -372,8 +373,7 @@
   }
 
   .description {
-    font-style: italic;
-    color: #5d5d5d;
+    font-family: "Fira Sans", sans-serif;
     margin: 11px 5px;
     line-height: 23px;
     word-break: break-word;
@@ -383,6 +383,10 @@
       color: white;
       padding: 2px 7px;
       border-radius: 99999px;
+    }
+
+    & > span {
+      padding: 0 3px;
     }
   }
 
@@ -482,9 +486,8 @@
 }
 
 .tagline {
-  font-style: italic;
+  font-family: "Fira Sans", sans-serif;
   font-size: 0.77em;
-  color: #494949;
   margin-bottom: 10px;
 }
 
