--- a/src/app/voter/voter.component.html
+++ b/src/app/voter/voter.component.html
@@ -2,9 +2,9 @@
   <div class="votes" [matTooltip]="getVotersText(pollItem)">
     <span>{{ pollItem.voters.length }}</span>
   </div>
-  <div class="button-container">
-    <button mat-raised-button color="primary" (click)="clicked()" class="favorite">
+  <div class="button-container cursor-pointer">
+    <div color="primary" (click)="clicked()" class="favorite">
       <mat-icon class="heart-icon">favorite</mat-icon>
-    </button>
+    </div>
   </div>
 </div>
