--- a/src/app/poll-management/poll-management.component.html
+++ b/src/app/poll-management/poll-management.component.html
@@ -5,7 +5,7 @@
   <ng-container *ngIf="loading$ | async">
     <ng-container *ngTemplateOutlet="spinner"></ng-container>
   </ng-container>
-  <ng-container *ngIf="(user$ | async).id; else showLogin">
+  <ng-container *ngIf="(user$ | async)?.id; else showLogin">
     <ng-container *ngIf="polls$ | async as polls; else spinner">
       <mat-card class="poll" *ngFor="let poll of polls">
         <div>
